Almost fixed scrollbars in previews

--- a/src/main/resources/css/fileview.css
+++ b/src/main/resources/css/fileview.css
@@ -1,6 +1,6 @@
 html, body {
     max-width: 100vw;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .preview, .modify, .switch, .settings {
